--- a/config/boards/shields/moNa2/moNa2_R.conf
+++ b/config/boards/shields/moNa2/moNa2_R.conf
@@ -36,3 +36,6 @@ CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
